<resources>
    <string name="app_name">Księgarnia</string>
    <string name="login">Zaloguj</string>
    <string name="categories">Kategorie</string>
    <string name="favourite">Ulubione</string>
    <string name="settings">Ustawienia</string>
    <string name="search">Szukaj</string>
    <string name="basket">Koszyk</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="history">Historyczne</string>
    <string name="fantasy">Fantaasy</string>
    <string name="foreign">Obcojęzyczne</string>
    <string name="polish">Polskich autorów</string>
    <string name="category_icon">category icon</string>
    <string name="logout">Wyloguj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Placeholder</string>
    <string name="displays_galery_item_image">Displays galery item image</string>
    <string name="special_offers">Oferty Specjalne</string>
    <string name="interesting_categories">Polecane Kategorie</string>
    <string name="description">Opis</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="add_to_cart">Dodaj do\nKoszyka</string>
    <string name="input_amount">Podaj ilosc</string>
    <string name="close">Zamknij</string>
    <string name="buy_now">Kup Teraz</string>
    <string name="total">Razem: %1$s</string>
    <string name="price_for_book">Cena: %1$s</string>
    <string name="books">Książki</string>
    <string name="display_as_galeries">Wyświetlaj galerie na liście książek</string>
</resources>
