<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/basket_view"
        android:title="@string/basket"
        android:icon="@drawable/basket_view_icon"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/login"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item android:id="@+id/categories"
        android:title="@string/categories"
        app:showAsAction="never"/>
    <item android:id="@+id/favourites"
        android:title="@string/favourite"
        app:showAsAction="never"/>
    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>